chore: refine documentation and build guardrails